apps/staging/snapcast/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapcast
  namespace: snapcast
spec:
  template:
    spec:
      containers:
        - name: snapserver
          image: gjcourt/snapcast:0.34.0-snapweb0.9.3
